--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "Backend for StayFinder - A property rental platform",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "node src/tests/api.test.js",
     "seed": "node src/scripts/seedData.js"
   },
