--- a/backend/.env
+++ b/backend/.env
@@ -16,4 +16,4 @@ CORS_ORIGIN=http://localhost:3000
 RATE_LIMIT_WINDOW_MS=900000  # 15 minutes
 RATE_LIMIT_MAX=100
 
-MONGODB_URI=mongodb://localhost:27017/stayfinder
+MONGODB_URI=mongodb+srv://vikash26122003sharma:Vikash123@cluster0.eb9oh.mongodb.net/stayfinder
