--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ PORT=5000
 NODE_ENV=development
 
 # MongoDB Configuration
-# MONGODB_URI=mongodb+srv://Nikhil:Nikhil22C7147@cluster0.0c47t.mongodb.net/stayfinder
+# MONGODB_URI= apna url dalo
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
@@ -16,4 +16,4 @@ CORS_ORIGIN=http://localhost:3000
 RATE_LIMIT_WINDOW_MS=900000  # 15 minutes
 RATE_LIMIT_MAX=100
 
-MONGODB_URI=mongodb+srv://vikash26122003sharma:Vikash123@cluster0.eb9oh.mongodb.net/stayfinder
+MONGODB_URI=apna url dalo
